--- a/.env
+++ b/.env
@@ -1,3 +1,26 @@
-THEME=https://raw.githubusercontent.com/seanwcom/Red-Graphite-for-Obsidian/HEAD/theme.css
-BASE_THEME=dark
+SITE_NAME_HEADER=Pepar Read
+SITE_MAIN_LANGUAGE=zh
+SITE_BASE_URL=https://paper.molastra.org
+SHOW_CREATED_TIMESTAMP=false
+TIMESTAMP_FORMAT=MMM dd, yyyy h:mm a
+SHOW_UPDATED_TIMESTAMP=false
+NOTE_ICON_DEFAULT=
+NOTE_ICON_TITLE=false
+NOTE_ICON_FILETREE=false
+NOTE_ICON_INTERNAL_LINKS=false
+NOTE_ICON_BACK_LINKS=false
+STYLE_SETTINGS_CSS=
+STYLE_SETTINGS_BODY_CLASSES=
+USE_FULL_RESOLUTION_IMAGES=false
+THEME=https://raw.githubusercontent.com/laughmaker/Zen/HEAD/theme.css
+BASE_THEME=light
 dgHomeLink=true
+dgPassFrontmatter=false
+dgShowBacklinks=false
+dgShowLocalGraph=false
+dgShowInlineTitle=false
+dgShowFileTree=false
+dgEnableSearch=true
+dgShowToc=true
+dgLinkPreview=false
+dgShowTags=true
